--- a/southstatebank2.html
+++ b/southstatebank2.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>South State Bank Login</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="bank.css">
 </head>
 
 <body>
@@ -21,7 +21,7 @@
         <p id="answer2"><a href="realAbout2.html">About Page</a></p>
     </div>
     <p></p>
-    <a href="index.html">home</a>
+    <a href="index.html">Home</a>
 
     <script src="jquery.js"></script>
     <script src="test.js"></script>
